# gdshader-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  build_all.sh  test.gdshader  yorb.gdshaderinc
gdshader-lsp-vscode/: README.md  package-lock.json  package.json  tsconfig.json
gdshader-lsp-vscode/client/: package-lock.json  package.json  tsconfig.json
gdshader-lsp-vscode/client/src/: extension.ts
gdshader-lsp-vscode/scripts/: e2e.sh
gdshader-lsp-vscode/syntaxes/: gdshader.tmLanguage.json  gdshader.tmLanguage.yaml
src/: completion.rs  lib.rs  main.rs  source_code.rs
src/interpreter/: expression_interpreter.rs  mod.rs  statement_interpreter.rs  top_level_interpreter.rs
src/lexer/: mod.rs  operations.rs  token.rs  token_stream.rs
src/memory/: functions.rs  hint.rs  mod.rs  render_modes.rs  scope.rs  types.rs  variables.rs
src/nodes/: expression_node.rs  mod.rs  statement_node.rs  top_level_nodes.rs
src/parser/: expression.rs  mod.rs  statement.rs  top_level_parser.rs
