[package]
name = "gdshader-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
regex = "1.10"
serde_json = "1.0.1"
strum_macros = "0.26.1"
walkdir = "2.4"

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin14-clang"
ar = "x86_64-apple-darwin14-ar"

